--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/node": "^22.2.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.3"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "@types/moment": "^2.13.0",
     "axios": "^1.7.3",
     "cors": "^2.8.5",
