--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "typescript": "^5.5.3"
   },
   "dependencies": {
+    "@aws-sdk/client-ec2": "^3.627.0",
+    "@aws-sdk/credential-provider-env": "^3.620.1",
     "@types/axios": "^0.14.0",
     "@types/moment": "^2.13.0",
     "axios": "^1.7.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "moment": "^2.30.1"
   }
